# staticwebsite-cli

./: Cargo.toml  README.md  policy.json
.github/: release.yaml
.github/workflows/: build.yaml  release.yaml
src/: cfn_template.yaml  cloudformation_helpers.rs  cloudfront_helpers.rs  error.rs  main.rs  route53_helpers.rs  s3_helpers.rs
test/: index.html
