[package]
name = "staticwebsite_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
aws-sdk-s3 = "0.24.0"
aws-sdk-cloudformation = "0.24.0"
aws-sdk-route53 = "0.24.0"
aws-sdk-sts = "0.24.0"
aws-sdk-cloudfront = "0.24.0"
aws-config = "0.54.1"
tokio = {version = "1.26.0", features=["full"]}
thiserror = "1.0.38"
futures = "0.3.26"
mime_guess = "2.0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
