[package]
name = "staticwebsite_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
aws-sdk-s3 = "0.30.0"
aws-sdk-cloudformation = "0.30.0"
aws-sdk-route53 = "0.30.0"
aws-sdk-sts = "0.30.0"
aws-sdk-cloudfront = "0.30.0"
aws-config = "0.56.1"
tokio = {version = "1.32.0", features=["full"]}
thiserror = "1.0.47"
futures = "0.3.28"
mime_guess = "2.0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# This is only here so we can match on byte-stream errors until this issue is closed
# https://github.com/awslabs/aws-sdk-rust/issues/600
aws-smithy-http = "0.56.1"
