[package]
name = "staticwebsite_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
aws-sdk-s3 = "1.4.0"
aws-sdk-cloudformation = "1.3.0"
aws-sdk-route53 = "1.3.0"
aws-sdk-sts = "1.3.0"
aws-sdk-cloudfront = "1.3.0"
aws-config = "1.0.1"
tokio = {version = "1.34.0", features=["full"]}
thiserror = "1.0.50"
futures = "0.3.29"
mime_guess = "2.0.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# This is only here so we can match on byte-stream errors until this issue is closed
# https://github.com/awslabs/aws-sdk-rust/issues/600
aws-smithy-http = "0.60.0"
